Replace desktop editions with a Node npm service
